# motif

./: .gitignore  Cargo.toml  Justfile  README.md  devenv.nix
crates/motif/: Cargo.toml
crates/motif-core/: Cargo.toml
crates/motif-core/src/: id.rs  lib.rs  note.rs  tick.rs
crates/motif-engine/: Cargo.toml
crates/motif-engine/src/: buffer.rs  clock.rs  control.rs  error.rs  events.rs  graph.rs  lib.rs  node.rs
crates/motif-instruments/motif-pulse/: Cargo.toml
crates/motif-instruments/motif-pulse/examples/: play.rs
crates/motif-instruments/motif-pulse/src/: envelope.rs  lib.rs  synth.rs  voice.rs
crates/motif-ui/: Cargo.toml
crates/motif-ui/src/: app.rs  canvas.rs  lib.rs  status_bar.rs  theme.rs
crates/motif/src/: main.rs
