[workspace]
resolver = "3"
members = [
    "crates/motif-core",
    "crates/motif-engine",
    "crates/motif-instruments/motif-pulse",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
motif-engine = { path = "crates/motif-engine" }
motif-pulse = { path = "crates/motif-instruments/motif-pulse" }
wmidi = "4.0.10"
cpal = "0.17.1"
