[workspace]
resolver = "3"
members = ["crates/motif",
    "crates/motif-core",
    "crates/motif-engine",
    "crates/motif-instruments/motif-pulse", "crates/motif-ui",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
motif-core = { path = "crates/motif-core" }
motif-engine = { path = "crates/motif-engine" }
motif-pulse = { path = "crates/motif-instruments/motif-pulse" }
motif-ui = { path = "crates/motif-ui" }
wmidi = "4.0.10"
cpal = "0.17.1"
iced = { version = "0.14.0", features = ["canvas"] }
